--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -25,7 +25,7 @@
     justify-content: space-between;
 }
 
-@media screen and (max-width:480px {
+@media screen and (max-width:480px) {
     .pl{
         padding: 10px;
 
