--- a/src/intro/Intro.css
+++ b/src/intro/Intro.css
@@ -14,6 +14,8 @@
     position: relative;
    
 }
+
+
 .i-left-wrapper{
     padding: 50px;
     height: 100%;
@@ -64,11 +66,23 @@
     align-items: center;
   
 }
+
+.i-bg{
+    clip-path: polygon(100% 0%, 100% 48%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+    background-color: #59b256;
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0;
+    right: 0;
+}
+
 .i-img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     position: absolute;
+   
 }   
 
 .i-description {
